[gd_scene load_steps=5 format=3 uid="uid://bbevq5pfxujjd"]

[ext_resource type="Script" path="res://player.gd" id="1_ylha0"]
[ext_resource type="Texture2D" uid="uid://c8cbj631edooc" path="res://icon.svg" id="2_cucjh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fy8px"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cucjh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83srx"]
size = Vector2(49, 49)

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource("1_ylha0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_fy8px")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_83srx")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BulletTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
